<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.wifipasshhhwi.activity.HelloActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/logo_hello"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_password_hacker"
            android:textSize="35sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_marginTop="@dimen/basic_margin"
            />
        
        <Button
            android:id="@+id/startNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_start_now"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="@dimen/basic_margin"
            />

    </LinearLayout>

</RelativeLayout>
