<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="@dimen/basic_margin"
    android:paddingEnd="@dimen/basic_margin"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            >

            <TextView
                android:id="@+id/networkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/authType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_wpa_psk"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/signalLevel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/wifi_signal_3"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/wifi_signal_description" />

    </RelativeLayout>

</RelativeLayout>